[package]
name = "sht4x"
description = "Sensirion SHT4x Driver for Embedded HAL"
version = "0.2.0-alpha.0"
edition = "2021"

authors = ["Christian Meusel <christian.meusel@posteo.de>"]

license = "MIT OR Apache-2.0"

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["driver", "embedded-hal-driver", "sensirion", "sht40"]

documentation = "https://docs.rs/sht4x"
repository = "https://github.com/sirhcel/sht4x"
readme = "README.md"

exclude = [
    "/.github/",
    ".gitignore",
]


[dependencies]
defmt = { version = "0.3.2", optional = true }
embedded-hal = "0.2.7"
fixed = "1.20.0"
sensirion-i2c = "0.2"

[features]
defmt = ["dep:defmt"]
